2010-12-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnmaildir.el (nnmaildir-request-set-mark): Add article to add-mark
	funcall.

2010-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-gravatar.el (gnus-gravatar-insert): Allow LWSP in the middle of
	names.

	* shr.el (shr-find-fill-point): Don't break line between kinsoku-bol
	characters.

	* gnus-gravatar.el (gnus-gravatar-insert): Delete unnecessary binding
	to t of inhibit-read-only since it is inside gnus-with-article-headers.
	Suggested by Štěpán Němec <stepnem@gmail.com>.
	(gnus-gravatar-transform-address): Use mail-extract-address-components
	that supports non-ASCII names rather than mail-header-parse-addresses.

2010-11-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (open-protocol-stream): All starttls connections are
	handled by the network handler.

2010-11-30  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-open-connection-1): Use gnus-string-match-p.
	(nnimap-open-connection-1): Fix PREAUTH.

	* gnus-gravatar.el (gnus-gravatar-size): Set gnus-gravatar-size to nil.

2010-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-char-breakable-p, shr-char-nospace-p)
	(shr-char-kinsoku-bol-p, shr-char-kinsoku-eol-p): New macros.
	(shr-insert): Use them.
	(shr-find-fill-point): Work better for kinsoku chars and apostrophes.

2010-11-29  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-move-article): Bail out if original group
	doesn't support article moves.
	(nnir-get-active): Improve active list retrieval.

2010-11-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-find-fill-point): Don't break before apostrophes.

2010-11-29  Binjo  <binjo.cn@gmail.com>  (tiny change)

	* nnimap.el (nnimap-open-connection-1): w32 open-network-stream doesn't
	seem to accept strings-with-numbers as port numbers,

2010-11-29  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-delete-article): If delete fails don't
	change the registry.
