@@ -1,3 +1,7 @@
+2010-12-01  Julien Danjou  <julien@danjou.info>
+
+	* gnus-msg.el: Remove nastygram thing.
+
 2010-12-01  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* nnmaildir.el (nnmaildir-request-set-mark): Add article to add-mark
